--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mosaic-crochet-pattern-creator",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@hugocxl/react-to-image": "^0.0.8",
     "bootstrap": "^5.3.2",
