--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": ".",
     "dependencies": {
         "bootstrap": "^5.3.2",
+        "mediancut": "^2.1.12",
         "react": "^18.2.0",
         "react-bootstrap": "^2.9.1",
         "react-dom": "^18.2.0",
