--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.17.0",
