--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "@types/react": "^18.2.33",
         "@types/react-dom": "^18.2.14",
         "eslint-config-prettier": "^9.0.0",
-        "prettier": "3.1.0"
+        "prettier": "3.1.0",
+        "ts-node": "^10.9.2"
     },
     "scripts": {
         "start": "react-scripts start",
